change image from directory

--- a/recipes/barbacoapicanha.html
+++ b/recipes/barbacoapicanha.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Barbacoa de Picaña</h1>
-    <img src="../images/picaña Small.jpeg" alt="barbacoa">
+  <img src="images/picaña Small.jpeg" alt="">
    <h2>Tacos de picaña en barbacoa</h2>
    <h4>Deliciosos tacos de suave y jugosa carne de picaña hecha en asador a fuego lento</h3>
 <h2>Ingredientes</h2>
