--- a/recipes/barbacoapicanha.html
+++ b/recipes/barbacoapicanha.html
@@ -10,6 +10,8 @@
     <h1>Barbacoa de Picaña</h1>
   
     <img src="images/picaña Small.jpeg" alt="">
+    <img src="images/taco1.jpeg" alt="">
+    <img src="images/taco2.jpeg" alt="">
    <h2>Tacos de picaña en barbacoa</h2>
    <h4>Deliciosos tacos de suave y jugosa carne de picaña hecha en asador a fuego lento</h3>
 <h2>Ingredientes</h2>
