--- a/recipes/barbacoapicanha.html
+++ b/recipes/barbacoapicanha.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Barbacoa de Picaña</h1>
   
-    <img src="images/picaña Small.jpeg" alt="">
+    <img src="images/Small.jpeg" alt="">
     <img src="images/taco1.jpeg" alt="">
     <img src="images/taco2.jpeg" alt="">
    <h2>Tacos de picaña en barbacoa</h2>
