--- a/recipes/barbacoapicanha.html
+++ b/recipes/barbacoapicanha.html
@@ -9,21 +9,24 @@
 </head>
 <body>
     <h1>Barbacoa de Picaña</h1>
+    <div class="container1">
+        <img src="images/Small.jpeg" alt="" class="imagen">
+        <img src="images/taco1.jpeg" alt=""class="imagen">
+       <img src="images/taco2.jpeg" alt=""class="imagen">  
+  </div>
   
-    <img src="images/Small.jpeg" alt="">
-    <img src="images/taco1.jpeg" alt="">
-    <img src="images/taco2.jpeg" alt="">
    <h2>Tacos de picaña en barbacoa</h2>
    <h4>Deliciosos tacos de suave y jugosa carne de picaña hecha en asador a fuego lento</h3>
-<h2>Ingredientes</h2>
-<ul>
-<li>1 kg de picaña</li>
-<li>2 cervezas oscuras</li>
-<li>tortillas de harina</li>
-<li>aguacate</li>
-<li>sal</li>
-<li>pimienta</li>
-</ul>
+
+    <h2>Ingredientes</h2>
+        <ul>
+            <li>1 kg de picaña</li>
+            <li>2 cervezas oscuras</li>
+            <li>tortillas de harina</li>
+            <li>aguacate</li>
+            <li>sal</li>
+            <li>pimienta</li>
+        </ul>
 <h2>Preparación</h2>
 <ol>
     <li>Prepara el carbon y sella la picaña por todos lados hasta que se forme una costra oscuras</li>
@@ -35,8 +38,15 @@
     <li>calienta las tortillas y sirve la carne acompañada de salsa, limones y aguacate</li>
 </ol>
 
-
-
+<div class="container2">
+    <a href="../index.html"><img src="../recipes/images/backarrow.png" alt=""class="back"a>
+</div>
+   
 </body>
+
+
+
+
+
 </html>
 
